新增 倍数 多期参数
